# CraneServer

./: LICENSE  README.md
Client/: CMakeLists.txt  Client.cpp
Server/: CMakeLists.txt  server  server.cpp
